--- a/public/index1 without login.html
+++ b/public/index1 without login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>M</title>
+    <title>RenewU</title>
 
     <!-- bootstrap -->
     <link
@@ -34,7 +34,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-custom">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">M</a>
+            <a class="navbar-brand" href="#">RenewU</a>
             <button
               class="navbar-toggler"
               type="button"
