--- a/public/dash_board/index.html
+++ b/public/dash_board/index.html
@@ -28,7 +28,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-custom">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">M</a>
+            <a class="navbar-brand" href="#">RenewU</a>
             <button
               class="navbar-toggler"
               type="button"
